<resources>
    <string name="app_name">BMI Calculator Kotlin</string>
    <string name="height_txt">Height:</string>
    <string name="weight_txt">Weight:</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="convert_btn">Calculate</string>
    <string name="BMI_result">BMI: %s</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="cm">cm</string>
</resources>